--- a/backend/Machine learning/HT6-ML_Training.ipynb
+++ b/backend/Machine learning/HT6-ML_Training.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyM3d133uxym66Co6iKmukZq",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JoaoFelipe08/Hack6ix/blob/main/HT6-ML_Training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# === 🔐 Upload Kaggle API Token ==="
-      ],
       "metadata": {
         "id": "ZOPqv4apmm7f"
-      }
+      },
+      "source": [
+        "# === 🔐 Upload Kaggle API Token ==="
+      ]
     },
     {
       "cell_type": "code",
@@ -50,11 +32,7 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-e980ad59-44a0-44b8-91c7-3ae781217531\" name=\"files[]\" multiple disabled\n",
@@ -239,13 +217,17 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving kaggle.json to kaggle.json\n",
             "✅ Kaggle API key uploaded securely.\n"
@@ -269,11 +251,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Lists files in current directory\n",
-        "import os\n",
-        "print(os.listdir())"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -281,29 +259,50 @@
         "id": "ibLK0q7InTil",
         "outputId": "e3f82c99-7bb1-45ac-a95c-f2495a13efd8"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['.config', 'kaggle_API', 'sample_data']\n"
           ]
         }
+      ],
+      "source": [
+        "# Lists files in current directory\n",
+        "import os\n",
+        "print(os.listdir())"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zmp-NH47mh76"
+      },
       "source": [
         "# === 📦 Download Datasets from Kaggle ===\n",
         "Using subirbiswas19/skin-disease-dataset as an example for the analyses below"
-      ],
-      "metadata": {
-        "id": "zmp-NH47mh76"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PSW-7vRFnaJL",
+        "outputId": "d2e87a3a-6407-4da5-881a-352fbfc0e077"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Path to dataset files: /kaggle/input/skin-disease-dataset\n"
+          ]
+        }
+      ],
       "source": [
         "import kagglehub\n",
         "\n",
@@ -318,55 +317,20 @@
         "# Download another skin disease dataset (bacterial/fungal infections)\n",
         "path = kagglehub.dataset_download(\"subirbiswas19/skin-disease-dataset\")\n",
         "print(\"Path to dataset files:\", path)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PSW-7vRFnaJL",
-        "outputId": "d2e87a3a-6407-4da5-881a-352fbfc0e077"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Path to dataset files: /kaggle/input/skin-disease-dataset\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# === 📁 Explore the File Tree ==="
-      ],
       "metadata": {
         "id": "bf8xMweUr-YV"
-      }
+      },
+      "source": [
+        "# === 📁 Explore the File Tree ==="
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "base_path = '/kaggle/input/skin-disease-dataset/skin-disease-datasaet/test_set'  # This is where your datasets were extracted\n",
-        "\n",
-        "for dataset in os.listdir(base_path):\n",
-        "    print(f\"\\nDataset: {dataset}\")\n",
-        "    dataset_path = os.path.join(base_path, dataset)\n",
-        "    for version in os.listdir(dataset_path):\n",
-        "        version_path = os.path.join(dataset_path, version)\n",
-        "        print(f\"  → Version: {version}\")\n",
-        "        for root, dirs, files in os.walk(version_path):\n",
-        "            print(f\"    📂 {root}\")\n",
-        "            if dirs:\n",
-        "                print(f\"      ├─ Subfolders (classes?): {dirs}\")\n",
-        "            if files:\n",
-        "                print(f\"      ├─ Sample files: {files[:3]}\")\n",
-        "            break  # Only show the top-level folders/files\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -374,11 +338,10 @@
         "id": "Lvje2Tmer10E",
         "outputId": "073967b8-6cfb-4485-a4c3-4e9bbe332f28"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Dataset: FU-nail-fungus\n",
@@ -632,19 +595,43 @@
             "  → Version: BA- cellulitis (27).jpg\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "base_path = '/kaggle/input/skin-disease-dataset/skin-disease-datasaet/test_set'  # This is where your datasets were extracted\n",
+        "\n",
+        "for dataset in os.listdir(base_path):\n",
+        "    print(f\"\\nDataset: {dataset}\")\n",
+        "    dataset_path = os.path.join(base_path, dataset)\n",
+        "    for version in os.listdir(dataset_path):\n",
+        "        version_path = os.path.join(dataset_path, version)\n",
+        "        print(f\"  → Version: {version}\")\n",
+        "        for root, dirs, files in os.walk(version_path):\n",
+        "            print(f\"    📂 {root}\")\n",
+        "            if dirs:\n",
+        "                print(f\"      ├─ Subfolders (classes?): {dirs}\")\n",
+        "            if files:\n",
+        "                print(f\"      ├─ Sample files: {files[:3]}\")\n",
+        "            break  # Only show the top-level folders/files\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# === 🧠 MobileNetV2 Training Pipeline ==="
-      ],
       "metadata": {
         "id": "5UGR1LYAraf6"
-      }
+      },
+      "source": [
+        "# === 🧠 MobileNetV2 Training Pipeline ==="
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "o463X-2UEAyJ"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import torch\n",
@@ -652,15 +639,32 @@
         "from torch import nn, optim\n",
         "from torch.utils.data import DataLoader, random_split\n",
         "import pickle"
-      ],
-      "metadata": {
-        "id": "o463X-2UEAyJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ey7dNWsyrmwZ",
+        "outputId": "950eb7a1-2f3f-4091-da64-14d09488a11a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch [1/5] - Loss: 8.7282\n",
+            "Epoch [2/5] - Loss: 1.8213\n",
+            "Epoch [3/5] - Loss: 0.4404\n",
+            "Epoch [4/5] - Loss: 0.1180\n",
+            "Epoch [5/5] - Loss: 0.0518\n",
+            "✅ Model saved as biswas-skin_diseases_model.pkl\n"
+          ]
+        }
+      ],
       "source": [
         "# Paths and training parameters\n",
         "data_dir = \"/kaggle/input/skin-disease-dataset/skin-disease-datasaet/test_set\"\n",
@@ -717,29 +721,32 @@
         "    pickle.dump(model, f)\n",
         "\n",
         "print(\"✅ Model saved as biswas-skin_diseases_model.pkl\") # Change output statement depending on .pkl dataset"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ey7dNWsyrmwZ",
-        "outputId": "950eb7a1-2f3f-4091-da64-14d09488a11a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch [1/5] - Loss: 8.7282\n",
-            "Epoch [2/5] - Loss: 1.8213\n",
-            "Epoch [3/5] - Loss: 0.4404\n",
-            "Epoch [4/5] - Loss: 0.1180\n",
-            "Epoch [5/5] - Loss: 0.0518\n",
-            "✅ Model saved as biswas-skin_diseases_model.pkl\n"
-          ]
-        }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyM3d133uxym66Co6iKmukZq",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
